trying to fix alignment of contact me on abt me

--- a/styles.css
+++ b/styles.css
@@ -78,17 +78,6 @@ body {
     color: #F9B9C3; /* On hover, match headings for a cohesive feel */
   }
 
-  b {
-    color: #FAF9F6; 
-    text-decoration: none;
-    font-weight: 700;
-    text-align: center;
-  }
-
-  b:hover {
-    color: #F9B9C3; /* On hover, match headings for a cohesive feel */
-  }
-
   section {
     margin-bottom: 40px; /* Space between sections */
     padding: 20px;
@@ -105,6 +94,13 @@ body {
     line-height: 1.6; /* Improve readability */
     text-align: center;
   }
+    section a {
+      color: #FAF9F6;
+      text-align: center;
+  }
+    section a:hover {
+      color: #F9B9C3;
+    }
  
   nav ul {
     list-style: none;
